--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,11 +7,11 @@ add_executable(umessage
   sdl_clay.c
 )
 if (EMSCRIPTEN)
-  target_compile_options(umessage PRIVATE -DEMSCRIPTEN)
-  target_link_options(umessage PRIVATE --shell-file "${CMAKE_CURRENT_SOURCE_DIR}/../webport/index.html" --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../public@/" -sINITIAL_MEMORY=70254592)
+  target_compile_options(umessage PRIVATE -DEMSCRIPTEN --use-port=sqlite3 -sEXPORTED_RUNTIME_METHODS=ccall,cwrap)
+  target_link_options(umessage PRIVATE --shell-file "${CMAKE_CURRENT_SOURCE_DIR}/../webport/index.html" --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../public@/" -sINITIAL_MEMORY=70254592 --use-port=sqlite3)
   set(CMAKE_EXECUTABLE_SUFFIX ".html" CACHE INTERNAL "")
-  set(SDLIMAGE_VENDORED ON)
-  set(SDLTTF_VENDORED ON)
+  # set(SDLIMAGE_VENDORED ON)
+  # set(SDLTTF_VENDORED ON)
 endif()
 
 target_compile_options(umessage PRIVATE -Wno-write-strings)
@@ -21,24 +21,20 @@ if(CMAKE_BUILD_TYPE EQUAL Release)
   add_link_options(-Os -ffunction-sections -fdata-sections -Wl,--gc-sections)
 endif()
 
-set(SDL_LIBC ON)
-set(SDL_TEST_LIBRARY OFF)
-set(SDL_TESTS OFF)
-set(SDL_OPENGLES OFF)
-set(SDL_VIDEO ON)
-set(SDLIMAGE_AVIF OFF)	# disable formats we don't use to make the build faster and smaller.
-set(SDLIMAGE_BMP OFF)
-set(SDLIMAGE_JPEG OFF)
-set(SDLIMAGE_WEBP OFF)
-set(SDLIMAGE_BACKEND_IMAGEIO OFF)
-set(SDLIMAGE_BACKEND_STB OFF)
-set(SDLIMAGE_DEPS_SHARED OFF)
-set(SDLIMAGE_RELOCATABLE ON)
-set(SDLIMAGE_SAMPLES OFF)
-set(SDLIMAGE_STRICT ON)
-set(SDLIMAGE_VENDORED OFF)
-set(SDLTTF_VENDORED OFF)
-set(SDLTTF_SAMPLES OFF)
+# set(SDL_LIBC ON)
+# set(SDL_TEST_LIBRARY OFF)
+# set(SDL_TESTS OFF)
+# set(SDL_OPENGLES OFF)
+# set(SDL_VIDEO ON)
+# set(SDLIMAGE_AVIF OFF)	# disable formats we don't use to make the build faster and smaller.
+# set(SDLIMAGE_BMP OFF)
+# set(SDLIMAGE_JPEG OFF)
+# set(SDLIMAGE_WEBP OFF)
+# set(SDLIMAGE_BACKEND_IMAGEIO OFF)
+# set(SDLIMAGE_BACKEND_STB OFF)
+# set(SDLIMAGE_SAMPLES OFF)
+# set(SDLIMAGE_STRICT ON)
+# set(SDLTTF_SAMPLES OFF)
 include(FetchContent)
 FetchContent_Declare(
   sdl
