--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(umessage
   sdl_clay.c
 )
 if (EMSCRIPTEN)
-  target_compile_options(umessage PRIVATE -DEMSCRIPTEN -sEXPORTED_RUNTIME_METHODS=ccall,cwrap)
+  target_compile_options(umessage PRIVATE -DEMSCRIPTEN)
   target_link_options(umessage PRIVATE --shell-file "${CMAKE_CURRENT_SOURCE_DIR}/../webport/index.html" --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../public@/" -sINITIAL_MEMORY=70254592)
   set(CMAKE_EXECUTABLE_SUFFIX ".html" CACHE INTERNAL "")
   # set(SDLIMAGE_VENDORED ON)
